--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,10 +20,6 @@ html
           section.css-table
             section.four-column
               section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
+                p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque magna enim. Nulla euismod quis nulla in dictum. Aliquam erat volutpat. Mauris euismod cursus laoreet. Duis fringilla facilisis lacus interdum ultrices. Curabitur id purus venenatis, facilisis diam non, ultricies ex.
               section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
-              section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
-              section.cell
-                p Mauris porttitor <br />felis eu leo aliquet<br /> ac rutrum odio aliquet
+              
